# bhagavad-gita-ai-counselor

./: README.md
.devcontainer/: devcontainer.json
bhagavad_gita_chatbot/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.streamlit  Procfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
bhagavad_gita_chatbot/.github/workflows/: ci.yml
bhagavad_gita_chatbot/.streamlit/: config.toml
bhagavad_gita_chatbot/api/: main.py
bhagavad_gita_chatbot/chains/: prompts.py  rag_chain.py
bhagavad_gita_chatbot/data/: translation.json
bhagavad_gita_chatbot/services/: gemini_service.py  upload_service.py
bhagavad_gita_chatbot/templates/: .gitkeep
bhagavad_gita_chatbot/tests/: test_verse_integrity.py
bhagavad_gita_chatbot/utils/: config.py  logger.py  verse_parser.py
bhagavad_gita_chatbot/vectorstore/: database.py
