[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bhagavad-gita-ai-counselor"
version = "1.0.0"
description = "A spiritual AI counselor powered by Bhagavad Gita wisdom, FastAPI, and Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["bhagavad-gita", "ai", "counselor", "rag", "langchain", "gemini", "streamlit"]

authors = [
  { name = "Bhagavad Gita AI Counselor" }
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "streamlit>=1.35.0",
  "pydantic>=2.7.0",
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-google-genai>=1.0.6",
  "langchain-chroma>=0.1.2",
  "langchain-classic>=0.0.1",
  "chromadb>=0.5.0",
  "google-generativeai>=0.7.0",
  "pypdf>=4.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "chains*", "services*", "utils*", "vectorstore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
